tests/ui/traits/const-traits/minicore-drop-without-feature-gate.no.stderr
error[E0493]: destructor of `ConstDrop` cannot be evaluated at compile-time
  --> $DIR/minicore-drop-without-feature-gate.rs:24:13
   |
LL |     let _ = ConstDrop;
   |             ^^^^^^^^^- value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions
   |
   = note: see issue #133214 <https://github.com/rust-lang/rust/issues/133214> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
